fix: add linker flags for rush build process
- Added linker flags "-s -w" to the build commands for rush.exe and rush.wasm in Taskfile.yml to optimize the generated binaries.

Signed-off-by: Jia Sui <jsfaint@gmail.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,12 +9,12 @@ tasks:
     silent: false
   windows:
     cmds:
-      - cd cmd/rush && go build -o rush.exe
+      - cd cmd/rush && go build -ldflags="-s -w" -o rush.exe
     silent: false
   wasm:
     env:
       GOOS: js
       GOARCH: wasm
     cmds:
-      - cd cmd/rush && go build -o rush.wasm
+      - cd cmd/rush && go build -ldflags="-s -w" -o rush.wasm
     silent: false
